feat: integrate TurkiyeApi for location data retrieval and add caching support